canary/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-canary
  labels:
    app: nginx-canary
spec:
  replicas: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nginx-canary
  template:
    metadata:
      labels:
        app: nginx-canary
    spec:
      containers:
        - name: nginx-canary
          image: nginx:1.14.0
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
  strategy:
     canary: 
       steps:
       - setWeight: 20
       - pause: {}
       # The following pause step will pause the rollout indefinitely until manually resumed.
       # Rollouts can be manually resumed by running `kubectl argo rollouts promote ROLLOUT`
       - setWeight: 40
       - pause: {duration: 40s}
       - setWeight: 60
       - pause: {duration: 20s}
       - setWeight: 80
       - pause: {duration: 20s}
