canary/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
  labels:
    app: nginx-canary
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nginx-canary
