canary/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-canary
  namespace: canary
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx-canary.devsecops.com`)
      kind: Rule
      services:
        - name: nginx-canary
          port: 80
